<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        android:id="@+id/textViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/header"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTask"
        android:layout_toLeftOf="@+id/checkBoxEnabled"
        android:text="@string/scheduled"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <TextView
        android:id="@+id/textViewCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textViewContent"
        android:layout_below="@+id/TextViewRepeat"
        android:text="@string/created"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/id"
        android:textAppearance="?android:attr/textAppearanceSmall" />







    <CheckBox
        android:id="@+id/checkBoxEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewTask"
        android:checked="true"
        android:clickable="false"
        android:onClick="doTaskEnableDisable" />







    <TextView
        android:id="@+id/TextViewRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textViewContent"
        android:layout_below="@id/textViewContent"
        android:text="@string/repeat"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>